May 15

Taco's Notes:

Improved tooltips so they don't show funky stuff that has no bearing on how it would actually be made.

Added main_products so the Direct Sludge Waste setting can be used.

Expanded support for Tiberium Growth so it scales growth credit and farming recipes.

Added edge case support so choosing certain Tiberium Values won't crash your game.

Added Stone Growth Credit icon.

Some formatting cleanup. (Not that this affects the end users most of the time, but appreciated nonetheless.)

Standardized Refining Times.

Fixes ticket-0009: Tiberium growth now scales up regardless of which direction you go from the origin.

Fixes ticket-0009: Tiberium growth now scales with the Tiberium Growth setting.

Fixes ticket-0010: Tiberium no longer destroys/passes through cliffs.

Fixes ticket-0013: Tiberium nodes now have a minimum distance between them when spawn by Liquid Tiberium Seed rockets.

Fixes ticket-0014: Tiberium no longer naturally exceeds the maximum Max Tiberium Per Tile setting.

Tiberium Ore now destroys other resources when it spreads instead of just growing over them.

James' notes:

Working on Automation! In the mod, not in-game.

---------------------------------------------------------------------------------------------------

May 12

Fixed autogeneration math stuff, so Tiberium Value isn't backwards.

Fully commented out 'setMainResult'

Tiberium immune Power Armour.*

Added more fallback within having Bob's Ores.*

Gave up on coding growth to not damage poles, and just made them immune to tib damage. Fuck it.*

The nearest tib field should now be fully grown, so you don't need to run into the damage zone to harvest it.*

---------------------------------------------------------------------------------------------------

May 12

Fixed a debug thing.

Fixed autogeneration setting usage.

Reduced range of node damage from 10% more than growth radius to 60% of growth radius.
